adding appium config

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,11 @@
             <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>7.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
